--- a/twitter_lite/server/twitter-lite/pom.xml
+++ b/twitter_lite/server/twitter-lite/pom.xml
@@ -66,7 +66,19 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-validation</artifactId>
 </dependency>  
+<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
 
+<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-core</artifactId>
+    <version>2.14.1</version>
+</dependency>
+
+<dependency>
+   <groupId>com.fasterxml.jackson.datatype</groupId>
+   <artifactId>jackson-datatype-jsr310</artifactId>
+</dependency>
 
 <!-- end added dependencies -->
 	</dependencies>
