--- a/twitter_lite/client/package.json
+++ b/twitter_lite/client/package.json
@@ -8,6 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
+    "linkify": "^0.2.1",
+    "linkify-plugin-mention": "^4.0.2",
+    "linkify-react": "^4.0.2",
+    "linkifyjs": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
