--- a/twitter_lite/server/twitter-lite/pom.xml
+++ b/twitter_lite/server/twitter-lite/pom.xml
@@ -80,6 +80,15 @@
    <artifactId>jackson-datatype-jsr310</artifactId>
 </dependency>
 
+<dependency>
+    <groupId>javax.xml.bind</groupId>
+    <artifactId>jaxb-api</artifactId>
+    <version>2.3.1</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
+
+
+
 <!-- end added dependencies -->
 	</dependencies>
 
