--- a/twitter_lite/server/twitter-lite/src/main/resources/application.properties
+++ b/twitter_lite/server/twitter-lite/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.password=rootroot
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.hiddenmethod.filter.enabled=true
+
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.mvc.converters.preferred-json-mapper=gson
